--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Maven tests
+      run: mvn --batch-mode --update-snapshots test
+
+    - name: Maven package without test
+      run: mvn --batch-mode --update-snapshots package -DskipTests
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag jenkins-spring:$(date +%s)
